--- a/public/index.html
+++ b/public/index.html
@@ -56,11 +56,46 @@
           <li><button id="delete">Delete All</button></li>
         </ul>
       </nav>
+      <main class="workspace">
+        <div class="overlay"></div>
+        <section class="create-task">
+          <h2 class="section-header">Add a Task</h2>
+          <button class="close-addtask">
+            <i class="fa-solid fa-x"></i>
+          </button>
+          <form>
+            <label for="title">Title:</label>
+            <input type="text" id="title" placeholder="Task Name" required />
+            <label for="task-description">Description: </label>
+            <textarea
+              name="task-description"
+              id="description"
+              cols="25"
+              rows="4"
+              placeholder="Add task Description..."
+            ></textarea>
+            <div class="action-buttons">
+              <button class="create-button">Create</button>
+              <button class="reset-button">Reset</button>
+            </div>
+          </form>
+        </section>
+        <div class="main-section-header">
+          <h2 class="section-header">Tasks</h2>
+          <button class="create-task-button">
+            <i class="fa-solid fa-plus"></i>
+          </button>
+        </div>
+        <section class="tasks"></section>
+      </main>
     </div>
     <script
       src="https://kit.fontawesome.com/763dcc59d8.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../src/scripts/modal.js"></script>
     <script src="../src/scripts/controller.js"></script>
+    <script src="../src/scripts/view.js"></script>
+    <script src="../src/scripts/index.js"></script>
   </body>
 </html>
